...

    fun validateAndUpdateErrors(state: LoginUiState): Boolean {
        val errors = mutableMapOf<String, String>()
        val emailRegex = Regex("^[\\w.-]+@[\\w.-]+\\.[a-zA-Z]{2,}$")

        if (state.email.isBlank()) {
            errors["email"] = "Пошта обов’язкова."
        } else if (!emailRegex.matches(state.email)) {
            errors["email"] = "Неправильний формат пошти."
        }

        if (state.password.isBlank()) {
            errors["password"] = "Пароль обов’язковий."
        } else {
            if (state.password.length < 8) {
                errors["password"] = "Пароль має містити щонайменше 8 символів, здається ви забули пароль трошки"
            } else {
                if (!state.password.any { it.isLowerCase() }) {
                    errors["password"] = "Пароль повинен містити хоча б одну велику літеру, здається ви забули пароль трошки"
...
