...
)
@Composable
fun DefaultButtonPreview() {
    // Важно: вам нужно использовать существующий ресурс изображения
    PrimaryButton(
        imageRes = R.drawable.default_button_bg, // замените на свой ресурс
        text = "Увійти",
        onClick = {} // пустой обработчик
    )

}
