...
                    fieldErrors = uiState.fieldErrors,
                    isSingleLine = false
                )

                Text(
                    color = Color(0xFF1B2B3A),
                    text = "Дата народження",
                    style = MaterialTheme.typography.bodyLarge
                )
                Spacer(modifier = Modifier.height(4.dp))
                BirthDatePickerField(selectedDate = uiState.birthDate, onDateSelected = {
                    Log.d("RegistrationScreen", "Selected Date: $it")
                    registrationViewModel.updateBirthDate(it)
...
                    RadioButton(selected = uiState.gender == "f",
                        text = "Жінка",
                        onClick = { registrationViewModel.updateField("gender", "f") },
                        style = "gender")
                    Spacer(modifier = Modifier.width(64.dp))
                    RadioButton(selected = uiState.gender == "m",
                        text = "Чоловік",
                        onClick = { registrationViewModel.updateField("gender", "m") },
                        style = "gender")
                }
                Spacer(modifier = Modifier.height(16.dp))

                LabeledTextField(
...
                )
            }

            Spacer(modifier = Modifier.height(16.dp))
            PrimaryButton(
                imageRes = R.drawable.default_button_bg,
                text = "Зареєструватися",
                onClick = {registrationViewModel.register(authViewModel)}
            )

            Spacer(modifier = Modifier.height(8.dp))
            Text(
                text = "Вже маєте акаунт? Увійти!",
...
