...
                onClick = { loginViewModel.onLoginClicked(authViewModel) }
            )

            Spacer(modifier = Modifier.height(8.dp))

            Text(
                text = "Вперше з нами? Зареєструватися!",
                //color = Color.Blue,
                modifier = Modifier.clickable {
                    //viewModel.onForgotPasswordClicked()
                    navController.navigate("register")
                }
            )
...
